Created basket table in database, developed new api layer and added efficient product adding to the basket method, alos added fetching logic to the frontend